# zkir

./: .bazelrc  .bazelrc.ci  .clang-format  .gitignore  .gitmessage  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE.bazel  a.llvm  run_clang_tidy.sh
.gemini/: styleguide.md
.github/: actionlint.yaml  semantic.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yml
.github/workflows/: ci.yml
bazel/: zkir_deps.bzl
benchmark/: BUILD.bazel  BenchmarkUtils.h  CudaUtils.h  benchmark.bzl
benchmark/gpu/msm/: BUILD.bazel  msm_benchmark.cc  msm_cpu.mlir  msm_gpu.mlir
benchmark/gpu/ntt/: BUILD.bazel  ntt_benchmark.cc  ntt_cpu.mlir  ntt_gpu.mlir
benchmark/gpu/vecops/: BUILD.bazel  vecops_benchmark.cc  vecops_cpu.mlir  vecops_gpu.mlir
benchmark/mod_arith/: BUILD.bazel  mul_benchmark_test.cc
benchmark/msm/: BUILD.bazel  msm_benchmark.mlir  msm_benchmark_test.cc
benchmark/ntt/: BUILD.bazel  ntt_benchmark.mlir  ntt_benchmark_test.cc
benchmark/poseidon2/: BUILD.bazel  poseidon2.mlir  poseidon2_benchmark.cc
prime_ir/: pyinit_stub.c
prime_ir/Dialect/EllipticCurve/IR/: EllipticCurveAttributes.cpp
prime_ir/Dialect/Field/Conversions/FieldToModArith/: PrimeFieldCodeGen.h
prime_ir/Dialect/Field/IR/: BUILD.bazel  ExtensionFieldOperation.h  FieldOperation.cpp  FieldOperation.h  FieldOps.cpp  PrimeFieldOperation.h
prime_ir/Dialect/ModArith/Conversions/ModArithToArith/: ModArithToArith.h
prime_ir/Dialect/ModArith/IR/: BUILD.bazel  ModArithOperation.cpp  ModArithOperation.h
prime_ir/Utils/: BUILD.bazel  Power.h  ZkDtypes.h
tests/: BUILD.bazel  bn254_ec_defs.mlir  bn254_ec_mont_defs.mlir  bn254_field_defs.mlir  lit.cfg.py  mod_arith_bn254.mlir  mod_arith_to_arith.mlir  poly_ntt_runner.mlir  polynomial_syntax.mlir  poseidon2.mlir  poseidon2_packed.mlir  prime_field_to_mod_arith.mlir  testing.md
tests/Dialect/ArithExt/: BUILD.bazel  packed_arith_runner.mlir
tests/Dialect/EllipticCurve/: BUILD.bazel  bucket_acc_runner.mlir  bucket_reduce_runner.mlir  bufferization.mlir  canonicalize.mlir  elliptic_curve_msm_runner.mlir  elliptic_curve_syntax.mlir  elliptic_curve_to_field.mlir  elliptic_curve_to_field_runner.mlir  linalg.mlir  memref.mlir  tensor.mlir  window_reduce_runner.mlir
tests/Dialect/Field/: BUILD.bazel  ExtensionFieldOperationTest.cpp  PrimeFieldOperationTest.cpp  affine.mlir  bufferization.mlir  cubic_ext_field_to_mod_arith.mlir  field_canonicalization.mlir  field_canonicalize.mlir  field_runner.mlir  field_to_gpu.mlir  field_to_mod_arith_and_canonicalize.mlir  linalg.mlir  memref.mlir  poseidon2_unit_tests.mlir  prime_field_to_mod_arith.mlir  quadratic_ext_field_to_mod_arith.mlir  quartic_ext_field_to_mod_arith.mlir  tensor.mlir
tests/Dialect/ModArith/: ModArithOperationTest.cpp  affine.mlir  bufferization.mlir  canonicalize.mlir  linalg.mlir  memref.mlir  mod_arith_runner.mlir  mod_arith_to_arith.mlir
tests/Dialect/Poly/: ntt_runner.mlir  ntt_to_gpu.mlir  poly_ntt_runner.mlir  poly_to_field.mlir
tools/: BUILD.bazel  setup_llvm_clone.sh  zkir-lsp.cpp  zkir-opt.cpp
utils/cuda/: BUILD.bazel  CudaRuntimeUtils.cu  CudaUtils.h
zkir/Dialect/Arith/Conversions/ArithToModArith/: ArithToModArith.cpp  ArithToModArith.h  BUILD.bazel
zkir/Dialect/ArithExt/Conversions/SpecializeArithToAVX/: BUILD.bazel  SpecializeArithToAVX.cpp  SpecializeArithToAVX.h  SpecializeArithToAVX.td
zkir/Dialect/EllipticCurve/Conversions/EllipticCurveToField/: BUILD.bazel  ConversionUtils.cpp  ConversionUtils.h  EllipticCurveToField.cpp  EllipticCurveToField.td
zkir/Dialect/EllipticCurve/Conversions/EllipticCurveToField/PointOperations/: BUILD.bazel  PointCodeGen.cpp  PointCodeGen.h
zkir/Dialect/EllipticCurve/Conversions/EllipticCurveToLLVM/: EllipticCurveToLLVM.cpp
zkir/Dialect/EllipticCurve/IR/: BUILD.bazel  EllipticCurveAttributes.cpp  EllipticCurveAttributes.td  EllipticCurveDialect.cpp  EllipticCurveOps.cpp  EllipticCurveOps.h  EllipticCurveOps.td  PointOperationSelector.h
zkir/Dialect/Field/Conversions/FieldToModArith/: BUILD.bazel  ConversionUtils.cpp  ConversionUtils.h  ExtensionFieldCodeGen.h  FieldCodeGen.cpp  FieldCodeGen.h  FieldToModArith.cpp  FieldToModArith.h  PrimeFieldCodeGen.cpp  PrimeFieldCodeGen.h
zkir/Dialect/Field/Conversions/FieldToModArith/Extension/: CubicExtensionField.cpp  (+4 more)
zkir/Dialect/Field/IR/: BUILD.bazel  FieldAttributes.cpp  FieldAttributes.h  FieldAttributes.td  FieldCanonicalization.td  FieldDialect.cpp  FieldDialect.h  FieldDialect.td  FieldOperation.h  FieldOps.cpp  FieldOps.h  FieldOps.td  FieldTypes.cpp  FieldTypes.h  FieldTypes.td
zkir/Dialect/Field/Pipelines/: BUILD.bazel  Passes.cpp  Passes.h
zkir/Dialect/ModArith/Conversions/ModArithToArith/: BUILD.bazel  ModArithToArith.cpp  ModArithToArith.h  ModArithToArith.td
zkir/Dialect/ModArith/Conversions/ModArithToArith/Reducer/: BUILD.bazel  MontReducer.cpp  MontReducer.h
zkir/Dialect/ModArith/IR/: BUILD.bazel  ModArithAttributes.cpp  ModArithAttributes.h  ModArithAttributes.td  ModArithCanonicalization.td  ModArithDialect.cpp  ModArithDialect.h  ModArithOperation.cpp  ModArithOperation.h  ModArithOps.cpp  ModArithOps.h  ModArithOps.td  ModArithTypes.cpp  ModArithTypes.h  ModArithTypes.td
zkir/Dialect/Poly/Conversions/PolyToField/: BUILD.bazel  PolyToField.cpp  PolyToField.td
zkir/Dialect/Poly/IR/: PolyAttributes.cpp  PolyAttributes.td  PolyCanonicalization.td  PolyOps.cpp  PolyOps.td
zkir/Dialect/TensorExt/Conversions/TensorExtToTensor/: BUILD.bazel  TensorExtToTensor.cpp  TensorExtToTensor.td
zkir/Dialect/TensorExt/IR/: BUILD.bazel  TensorExtAttributes.cpp  TensorExtCanonicalization.td  TensorExtOps.cpp  TensorExtOps.td
zkir/IR/: Attributes.cpp  Attributes.h  BUILD.bazel
zkir/Pipelines/: BUILD.bazel  PipelineRegistration.cpp  PipelineRegistration.h
zkir/Utils/: AdditiveCanonicalization.td  AssemblyFormatUtils.cpp  AssemblyFormatUtils.h  BUILD.bazel  CanonicalizationPatterns.inc  CommonTypeConstraints.td  ConversionUtils.cpp  ConversionUtils.h  MultiplicativeCanonicalization.td  ShapedTypeConverter.cpp  ShapedTypeConverter.h
(+15 files in other folders)
