load("//benchmark:benchmark.bzl", "zkir_benchmark", "zkir_mlir_cc_import")

zkir_mlir_cc_import(
    name = "msm_ciface",
    mlir_src = "msm_benchmark.mlir",
    zkir_opt_flags = [
        "-elliptic-curve-to-field",
        "-field-to-llvm=enable-openmp=true",
    ],
)

zkir_benchmark(
    name = "msm_benchmark_test",
    srcs = ["msm_benchmark_test.cc"],
    deps = [
        ":msm_ciface",
        "//benchmark:BenchmarkUtils",
        "@llvm-project//mlir:ExecutionEngine",
        "@llvm-project//mlir:Support",
        "@local_config_omp//:omp",
    ],
)
