load("//benchmark:benchmark.bzl", "zkir_benchmark_test")

zkir_benchmark_test(
    name = "msm_benchmark_test",
    mlir_src = "msm_benchmark.mlir",
    tags = ["manual"],
    test_src = ["msm_benchmark_test.cc"],
    zkir_opt_flags = [
        "-elliptic-curve-to-field",
        "-field-to-llvm=enable-openmp=true",
    ],
    deps = [
        "//benchmark:BenchmarkUtils",
        "@llvm-project//mlir:ExecutionEngine",
        "@llvm-project//mlir:Support",
    ],
)
