load("//benchmark:benchmark.bzl", "zkir_benchmark", "zkir_mlir_cc_import")

zkir_mlir_cc_import(
    name = "ntt_ciface",
    mlir_src = "ntt_benchmark.mlir",
    zkir_opt_flags = [
        "-poly-to-field",
        "-field-to-llvm=enable-openmp=true",
    ],
)

zkir_benchmark(
    name = "ntt_benchmark_test",
    srcs = ["ntt_benchmark_test.cc"],
    deps = [
        ":ntt_ciface",
        "//benchmark:BenchmarkUtils",
        "@llvm-project//mlir:ExecutionEngine",
        "@llvm-project//mlir:Support",
        "@local_config_omp//:omp",
    ],
)
