load("@rules_cuda//cuda:defs.bzl", "requires_cuda")
load("//benchmark:benchmark.bzl", "zkir_benchmark", "zkir_mlir_cc_import")

zkir_mlir_cc_import(
    name = "ntt_cpu_ciface",
    mlir_src = "ntt_cpu.mlir",
    zkir_opt_flags = [
        "-poly-to-field",
        "-field-to-llvm=enable-openmp=true",
    ],
)

zkir_mlir_cc_import(
    name = "ntt_gpu_ciface",
    mlir_src = "ntt_gpu.mlir",
    target_compatible_with = requires_cuda(),
    zkir_opt_flags = [
        "-poly-to-field",
        "-field-to-gpu=parallelize-affine=true",
    ],
)

zkir_benchmark(
    name = "ntt_benchmark_test",
    srcs = ["ntt_benchmark.cc"],
    target_compatible_with = requires_cuda(),
    deps = [
        ":ntt_cpu_ciface",
        ":ntt_gpu_ciface",
        "//benchmark:BenchmarkUtils",
        "@llvm-project//mlir:ExecutionEngine",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:mlir_cuda_runtime",
        "@local_config_omp//:omp",
    ],
)
