load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "MontReducer",
    srcs = ["MontReducer.cpp"],
    hdrs = ["MontReducer.h"],
    deps = [
        "//zkir/Dialect/ModArith/IR:ModArith",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Support",
    ],
)
